# crawl4ai-rag-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .pre-commit-setup.md  .secrets.baseline  CHANGELOG.md  CI_FIX_SUMMARY.md  CLAUDE_DESKTOP_CONFIG_WINDOWS.md  CLAUDE_DESKTOP_WINDOWS_FIX.md  CONTRIBUTING.md  Dockerfile  MCP_CLIENT_CONFIG.md  MCP_TESTING.md  Makefile  PATH_CHANGES.md  PR6_MODULARIZATION_PLAN.md  QA_CHECKLIST.md  QA_PROCESS.md  README.md  TROUBLESHOOTING_SUMMARY.md  coverage.json  docker-compose-test-qdrant.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.qdrant.yml  docker-compose.test.yml  docker-compose.yml  fastMCP_docs.md  implementation_fixes_summary.md  mcp_test.md  pyproject.toml  pytest.ini  qa_progress.md  run_qdrant_qa.sh  test_execution_report.md  test_imports.py  test_mcp_startup.py  test_mcp_stdio.sh  test_mcp_tools.py  test_tool_functions.py  (+1 more)
.github/: BRANCH_PROTECTION.md  CI_CD_SIMPLIFICATION_SUMMARY.md  CI_CD_TEST_STATUS.md  CODECOV_SETUP.md  CODEOWNERS.template  pull_request_template.md  test_consolidation_plan.md
.github/workflows/: README.md  ci.yml  deploy.yml  qdrant-qa.yml  test-coverage.yml  test-qdrant-simple.yml
analysis_scripts/test_scripts/: test_hallucination.py
analysis_scripts/user_scripts/: ai_test_script.py  test_hallucination_script.py
archived_configs/: CLAUDE_DESKTOP_CONFIG_EXAMPLES.md  CLAUDE_DESKTOP_FINAL_CONFIG.md  CLAUDE_DESKTOP_FIX.md  CLAUDE_DESKTOP_LINUX_SETUP.md  CLAUDE_DESKTOP_SETUP.md  claude_desktop_docker_config.json
archives/: todo.md
archives/configs/: CLAUDE_DESKTOP_CONFIG_EXAMPLES.md  CLAUDE_DESKTOP_CONFIG_WINDOWS.md  CLAUDE_DESKTOP_FINAL_CONFIG.md  CLAUDE_DESKTOP_FIX.md  CLAUDE_DESKTOP_LINUX_SETUP.md  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_TROUBLESHOOTING_SUMMARY.md  CLAUDE_DESKTOP_WINDOWS_FIX.md  claude_desktop_config.json  claude_desktop_config_linux.json  settings-fixed.yml
archives/reports/: COMPREHENSIVE_TEST_ANALYSIS.md  neo4j_has_commit_validation_report.md  test_execution_report.md  test_report_hallucination.md
archives/scripts/: README.md  check_context.py  debug_batch_urls.py  debug_url_error.py  debug_url_sources.py  integration_validation_test.py  parameter_validation_test.py  pipeline_verification_report.py  test_batch_mcp.js  test_callers_validation.py  test_final_parameter_validation.py  test_neo4j_fix.py  test_neo4j_query_fix_validation.py  test_neo4j_warning_suppression.py  test_param_validation_focused.py  test_parameter_fix.py  test_parameter_fix_simple.py  test_parameter_fix_validation.py  test_parameter_validation.py  test_url_fix.py  utils_original.py  validate_parameter_fix.py  verify_fix_simple.py
archives/test-outputs/: neo4j_query_fix_validation_report.json  test_claude_integration.json  test_request.json
archives/validation/: test_data_integrity.py  test_edge_cases.py  test_has_commit_simple.py  test_has_commit_warning_fix.py  test_performance.py  trigger_tool_test.py  verify_code_extraction.py
docker/searxng-backup/: limiter-test-fixed.toml  limiter-test-updated.toml
docs/: BRANCH_PROTECTION_GUIDE.md  CLAUDE_CODE_TESTING_PLAN.md  CLAUDE_DESKTOP_TROUBLESHOOTING_SUMMARY.md  DEPRECATION_WARNINGS.md  DEVELOPMENT_ENVIRONMENT.md  DEVELOPMENT_QUICKSTART.md  ERROR_RESOLUTION_WORKFLOW.md  IDE_SETUP_GUIDE.md  MIGRATION_GUIDE.md  NEO4J_QDRANT_BRIDGE.md  NEO4J_QDRANT_INTEGRATION.md  ONBOARDING_GUIDE.md  PHASE_6_SUMMARY.md  REFACTORING_GUIDE.md  TEST_AND_QA_PLAN.md  TROUBLESHOOTING_GUIDE.md  USAGE_EXAMPLES.md  async_event_loop_troubleshooting.md  docker-compose-consolidation.md  qdrant-point-id-fix.md  searxng-rate-limiting-fix.md  vector-dimension-fix.md
docs/QA/: MCP_TESTING.md  MCP_TOOLS_TESTING_PLAN.md  QA_PROCESS.md  TEST_AND_QA_PLAN.md  TEST_ENVIRONMENT_SETUP.md  UNIT_TESTING_PLAN.md  mcp_test.md  mcp_tools_test_results.md  qa_progress.md
knowledge_graphs/: ai_hallucination_detector.py  knowledge_graph_validator.py  parse_repo_into_neo4j.py  query_knowledge_graph.py  test_script.py
qdrant-config/: config.yaml
scripts/: analyze_coverage.py  fix_print_statements.py  fix_qdrant_async.sh  generate_performance_dashboard.py  http_to_stdio_bridge.py  run_integration_tests.sh  run_mcp_stdio.py  run_tests_with_coverage.sh  setup_branch_protection.py  simplify_mocks.py  test_commands.sh  test_integration_runner.py  test_integration_runner_with_env.py  test_mcp_client_basic.py  test_mcp_client_debug.py  test_mcp_env.py  test_mcp_initialize.py  test_mcp_manual.py  test_mcp_tool_invocation.py  test_mcp_tool_invocation_stdio.py  test_mcp_tools_clean.py  test_mcp_tools_final.py  test_mcp_tools_stdio.py  test_mcp_tools_stdio_v2.py  test_mcp_with_init.py  test_openai_key.py  test_qdrant_e2e.sh  test_wsl_command.bat  validate-test-environment.sh  validate_mcp_server.sh
searxng-backup/: searxng-test-updated.yml  searxng-test-updated2.yml
searxng-test/: limiter.toml  settings.yml
src/: config.py  crawl4ai_mcp.py  knowledge_graph_tools.py  main.py  security.py  tools.py  utils.py  utils_refactored.py
tests/: CLEANUP_REPORT.md  COVERAGE_GAP_ANALYSIS.md  ERROR_HANDLING_TEST_SUMMARY.md  FINAL_COVERAGE_ANALYSIS_REPORT.md  MOCK_SIMPLIFICATION_SUMMARY.md  NEO4J_TESTING_IMPLEMENTATION_REPORT.md  PERFORMANCE_MONITORING.md  QDRANT_INTEGRATION_TESTS_SUMMARY.md  README.md  TEST_QUALITY_ASSESSMENT_REPORT.md  benchmark_qdrant.py  conftest.py  factories.py  mcp_test_utils.py  mock_openai_helper.py  performance_plugin.py  performance_report.md  pre_connection_checklist.py  run_performance_test.sh  run_qdrant_tests.py  test_additional_helpers.py  test_advanced_features_unit.py  test_api_key_validation.py  test_batch_crawling.py  test_batch_mcp_stdio.py  test_batch_scraping.py  test_batch_url_fix.py  test_batch_url_integration.py  test_batch_via_http.py  test_chat_tool.py  test_code_extraction.py  test_code_extraction_direct.py  test_code_extraction_fix.py  test_code_extraction_fix_verification.py  test_code_extraction_integration.py  test_code_extraction_search_fix.py  test_configuration.py  test_content_helpers.py  test_context_wrappers.py  test_coverage_gaps.py  (+115 more)
(+100 files in other folders)
